--- a/templates/figures.html
+++ b/templates/figures.html
@@ -2,7 +2,7 @@
  * @Author: Leili
  * @Date: 2025-05-18 21:05:15
  * @LastEditors: Leili
- * @LastEditTime: 2025-05-21 11:12:29
+ * @LastEditTime: 2025-05-21 11:41:37
  * @FilePath: /StorageManagement/templates/figures.html
  * @Description: 
 -->
@@ -21,7 +21,7 @@
         <a href="/" class="btn btn-secondary mb-3">返回主页</a>
 
         <!-- 动态字体标题 -->
-        <h1 class="dynamic-title text-morandi-purple mb-4">手办列表</h1>
+        <h1 class="dynamic-title mb-4">手办列表</h1>
 
         <!-- 响应式表格 -->
         <div class="table-responsive">
