--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -9,14 +9,14 @@
     <!-- 本地自定义样式 -->
     <link rel="stylesheet" href="/static/css/main.css">
 </head>
-<body>
+<body class="bg-morandi-cream">
     <div class="container mt-5">
         <!-- 返回按钮 -->
         <a href="/" class="btn btn-secondary mb-3">返回主页</a>
         
-        <h1 class="mb-4">衣服列表</h1>
+        <h1 class="dynamic-title mb-4">衣服列表</h1>
         <!-- 衣服数据表格 -->
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-hover bg-white rounded">
             <thead class="bg-morandi-green">
                 <tr>
                     <th>名称</th>
