--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@
 table th {
     font-weight: bold;  /* 加粗 */
     white-space: nowrap;  /* 不换行 */
-    text-align: center;  /* 居中对齐 */
+    text-align: left;  /* 左对齐 */
 }
 
 /* 防止日期换行 */
