--- a/templates/figures.html
+++ b/templates/figures.html
@@ -2,7 +2,7 @@
  * @Author: Leili
  * @Date: 2025-05-18 21:05:15
  * @LastEditors: Leili
- * @LastEditTime: 2025-05-21 11:41:37
+ * @LastEditTime: 2025-05-21 12:53:14
  * @FilePath: /StorageManagement/templates/figures.html
  * @Description: 
 -->
@@ -17,11 +17,11 @@
 </head>
 <body class="bg-morandi-cream">
     <div class="container py-5">
-        <!-- 返回按钮 -->
-        <a href="/" class="btn btn-secondary mb-3">返回主页</a>
-
-        <!-- 动态字体标题 -->
-        <h1 class="dynamic-title mb-4">手办列表</h1>
+        <!-- 标题 & 返回按钮 -->
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1 class="dynamic-title mb-0">手办列表</h1>
+            <a href="/" class="btn btn-secondary">返回主页</a>
+        </div>
 
         <!-- 响应式表格 -->
         <div class="table-responsive">
@@ -38,7 +38,7 @@
                 </thead>
                 <tbody>
                     {% for item in figures %}
-                    <tr>
+                    <tr onclick="window.location='/figures/{{ item.id }}'" style="cursor: pointer;">
                         <td>{{ item.name }}</td>
                         <td>{{ item.category }}</td>
                         <td>¥{{ item.purchase_price }}{% if item.shipping_fee and item.shipping_fee != 0 %}(+{{ item.shipping_fee }}){% endif %}</td>
