feat: 添加图片压缩与WebP转换功能并优化详情路由
引入图片处理器模块，支持将静态图片自动压缩并转换为WebP格式以提升加载性能。同时重构详情路由逻辑，提取通用函数以简化代码结构。更新.gitignore以忽略缓存文件和静态图片目录。

--- a/templates/figures_detail.html
+++ b/templates/figures_detail.html
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="/static/images/{{ item.image }}" class="img-fluid rounded mb-3" alt="{{ item.name }}">
+                        <img src="/static/images/{{ item.image|replace('.jpg', '.webp')|replace('.png', '.webp') }}" class="img-fluid rounded mb-3" alt="{{ item.name }}">
                     </div>
                     <div class="col-md-6">
                         <ul class="list-group list-group-flush">
