--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>衣服列表</title>
+    <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
     <!-- Bootstrap 5 样式（CDN） -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- 本地自定义样式 -->
