--- a/templates/clothing_detail.html
+++ b/templates/clothing_detail.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ item.name }} - 详情</title>
+    <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/main.css">
 </head>
@@ -37,7 +38,7 @@
                                 <strong>购买日期：</strong> {{ item.purchase_date }}
                             </li>
                             <li class="list-group-item">
-                                <strong>数量：</strong> {{ item.quantity }}
+                                <strong>购买渠道：</strong> {{ item.purchase_channel }}
                             </li>
                         </ul>
                     </div>
