--- a/templates/figures_detail.html
+++ b/templates/figures_detail.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ item.name }} - 详情</title>
+    <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/main.css">
 </head>
@@ -31,25 +32,28 @@
                                 <strong>类别：</strong> {{ item.main_category }} - {{ item.category }}
                             </li>
                             <li class="list-group-item">
-                                <strong>购买价格：</strong> ¥{{ item.purchase_price }}
+                                <strong>购买价格：</strong> ¥{{ item.purchase_price }}{% if item.shipping_fee and item.shipping_fee != 0 %}(+{{ item.shipping_fee }}){% endif %}
                             </li>
                             <li class="list-group-item">
                                 <strong>购买日期：</strong> {{ item.purchase_date }}
                             </li>
                             <li class="list-group-item">
-                                <strong>卖出价格：</strong> {% if item.sold_price %}¥{{ item.sold_price }}{% else %}未卖出{% endif %}
+                                <strong>到货日期：</strong> {{ item.arrival_date }}
                             </li>
                             <li class="list-group-item">
-                                <strong>卖出日期：</strong> {% if item.sold_date %}{{ item.sold_date }}{% else %}未卖出{% endif %}
+                                <strong>成色：</strong> {{ item.condition }}
                             </li>
                             <li class="list-group-item">
                                 <strong>购买渠道：</strong> {{ item.purchase_channel }}
                             </li>
                             <li class="list-group-item">
-                                <strong>状态：</strong> {{ item.condition }}
+                                <strong>备注：</strong> {% if item.remark and item.remark == item.remark %}{{ item.remark }}{% else %}{% endif %}
                             </li>
                             <li class="list-group-item">
-                                <strong>备注：</strong> {{ item.remark }}
+                                <strong>卖出价格：</strong> {% if item.sold_price and item.sold_price == item.sold_price %}¥{{ item.sold_price }}{% else %}未卖出{% endif %}
+                            </li>
+                            <li class="list-group-item">
+                                <strong>卖出日期：</strong> {% if item.sold_price and item.sold_price == item.sold_price %}{{ item.sold_date }}{% else %}未卖出{% endif %}
                             </li>
                         </ul>
                     </div>
