--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,18 @@
+<!--
+ * @Author: Leili
+ * @Date: 2025-05-21 11:26:22
+ * @LastEditors: Leili
+ * @LastEditTime: 2025-05-22 10:13:35
+ * @FilePath: /StorageManagement/templates/index.html
+ * @Description: 
+-->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>家庭物品管理</title>
+    <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
     <!-- Bootstrap 5 样式（CDN） -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- 自定义样式 -->
