--- a/templates/clothing_detail.html
+++ b/templates/clothing_detail.html
@@ -13,6 +13,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/main.css">
 </head>
+
+<!-- 引入共享宏 -->
+{% from "macros.html" import display_attrib_filed, form_field %}
+
 <body class="bg-morandi-cream">
     <div class="container py-5">
         <a href="/clothing" class="btn btn-secondary mb-3">返回列表</a>
@@ -27,24 +31,40 @@
                         <img src="/static/images/{{ item.image }}" class="img-fluid rounded mb-3" alt="{{ item.name }}">
                     </div>
                     <div class="col-md-6">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <strong>类别：</strong> {{ item.main_category }} - {{ item.category }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>购买价格：</strong> ¥{{ item.purchase_price }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>购买日期：</strong> {{ item.purchase_date }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>购买渠道：</strong> {{ item.purchase_channel }}
-                            </li>
-                        </ul>
+                        <!-- 添加编辑按钮 -->
+                        <div class="d-flex justify-content-end mb-3">
+                            <button id="editToggle" class="btn btn-sm btn-outline-secondary">
+                                <i class="bi bi-pencil-square"></i> 编辑
+                            </button>
+                        </div>
+                        
+                        <!-- 属性展示视图 -->
+                        <div id="propertyView">
+                            <ul class="list-group list-group-flush">
+                                {{ display_attrib_filed('类别', item.main_category ~ ' - ' ~ item.category) }}
+                                {{ display_attrib_filed('购买价格', '¥' ~ item.purchase_price) }}
+                                {{ display_attrib_filed('购买日期', item.purchase_date) }}
+                                {{ display_attrib_filed('购买渠道', item.purchase_channel) }}
+                            </ul>
+                        </div>
+                        
+                        <!-- 编辑表单 -->
+                        <form id="propertyForm" style="display: none;" data-item-id="{{ item.id }}" data-item-type="clothing">
+                            {{ form_field('name', '名字', value=item.name) }}
+                            {{ form_field('category', '子类别', value=item.category) }}
+                            {{ form_field('purchase_price', '购买价格', 'number', item.purchase_price) }}
+                            {{ form_field('purchase_date', '购买日期', 'date', item.purchase_date) }}
+                            {{ form_field('purchase_channel', '购买渠道', value=item.purchase_channel) }}
+                            <div class="d-flex justify-content-end mt-3">
+                                <button type="button" class="btn btn-outline-danger me-2" id="cancelEdit">取消</button>
+                                <button type="submit" class="btn btn-primary">保存</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="{{ url_for('static', filename='js/detail.js') }}"></script>
 </html>
