--- a/templates/figures_detail.html
+++ b/templates/figures_detail.html
@@ -12,7 +12,12 @@
     <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/detail.css">
 </head>
+
+<!-- 引入共享宏 -->
+{% from "macros.html" import display_attrib_filed, form_field %}
+
 <body class="bg-morandi-cream">
     <div class="container py-5">
         <a href="/figures" class="btn btn-secondary mb-3">返回列表</a>
@@ -27,39 +32,51 @@
                         <img src="/static/images/{{ item.image|replace('.jpg', '.webp')|replace('.png', '.webp') }}" class="img-fluid rounded mb-3" alt="{{ item.name }}">
                     </div>
                     <div class="col-md-6">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <strong>类别：</strong> {{ item.main_category }} - {{ item.category }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>购买价格：</strong> ¥{{ item.purchase_price }}{% if item.shipping_fee and item.shipping_fee != 0 %}(+{{ item.shipping_fee }}){% endif %}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>购买日期：</strong> {{ item.purchase_date }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>到货日期：</strong> {{ item.arrival_date }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>成色：</strong> {{ item.condition }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>购买渠道：</strong> {{ item.purchase_channel }}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>备注：</strong> {% if item.remark and item.remark == item.remark %}{{ item.remark }}{% else %}{% endif %}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>卖出价格：</strong> {% if item.sold_price and item.sold_price == item.sold_price %}¥{{ item.sold_price }}{% else %}未卖出{% endif %}
-                            </li>
-                            <li class="list-group-item">
-                                <strong>卖出日期：</strong> {% if item.sold_price and item.sold_price == item.sold_price %}{{ item.sold_date }}{% else %}未卖出{% endif %}
-                            </li>
-                        </ul>
+                        <!-- 添加编辑按钮 -->
+                        <div class="d-flex justify-content-end mb-3">
+                            <button id="editToggle" class="btn btn-sm btn-outline-secondary">
+                                <i class="bi bi-pencil-square"></i> 编辑
+                            </button>
+                        </div>
+                        
+                        <!-- 属性展示视图 -->
+                        <div id="propertyView">
+                            <ul class="list-group list-group-flush">
+                                {{ display_attrib_filed('类别', item.main_category ~ ' - ' ~ item.category) }}
+                                {{ display_attrib_filed('购买价格', '¥' ~ item.purchase_price ~ ' ' ~ (item.shipping_fee if item.shipping_fee != 0 else '')) }}
+                                {{ display_attrib_filed('购买日期', item.purchase_date) }}
+                                {{ display_attrib_filed('到货日期', item.arrival_date) }}
+                                {{ display_attrib_filed('购买渠道', item.purchase_channel) }}
+                                {{ display_attrib_filed('成色', item.condition) }}
+                                {{ display_attrib_filed('备注', item.remark if item.remark and item.remark == item.remark else '') }}
+                                {{ display_attrib_filed('卖出价格', '¥' ~ item.sold_price if item.sold_price and item.sold_price == item.sold_price else '未卖出') }}
+                                {{ display_attrib_filed('卖出日期', item.sold_date if item.sold_date and item.sold_date == item.sold_date else '未卖出') }}
+                            </ul>
+                        </div>
+                        
+                        <!-- 编辑表单 -->
+                        <form id="propertyForm" style="display: none;" data-item-id="{{ item.id }}" data-item-type="figures">
+                            {{ form_field('name', '名字', value=item.name) }}
+                            {{ form_field('category', '子类别', value=item.category) }}
+                            {{ form_field('purchase_price', '购买价格', 'number', item.purchase_price) }}
+                            {{ form_field('shipping_fee', '运费', 'number', item.shipping_fee) }}
+                            {{ form_field('purchase_date', '购买日期', 'date', item.purchase_date) }}
+                            {{ form_field('arrival_date', '到货日期', 'date', item.arrival_date) }}
+                            {{ form_field('purchase_channel', '购买渠道', value=item.purchase_channel) }}
+                            {{ form_field('condition', '成色', value=item.condition) }}
+                            {{ form_field('remark', '备注', value=item.remark) }}
+                            {{ form_field('sold_price', '出售价格', 'number', item.sold_price) }}
+                            {{ form_field('sold_date', '出售日期', 'date', item.sold_date) }}
+                            <div class="d-flex justify-content-end mt-3">
+                                <button type="button" class="btn btn-outline-danger me-2" id="cancelEdit">取消</button>
+                                <button type="submit" class="btn btn-primary">保存</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="{{ url_for('static', filename='js/detail.js') }}"></script>
 </html>
