--- a/templates/clothing/list.html
+++ b/templates/clothing/list.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: Leili
+ * @Date: 2025-05-21 12:49:52
+ * @LastEditors: Leili
+ * @LastEditTime: 2025-05-26 14:16:50
+ * @FilePath: /StorageManagement/templates/clothing/list.html
+ * @Description: 
+-->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -15,7 +23,10 @@
         <!-- 标题 & 返回按钮 -->
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="dynamic-title mb-0">衣服列表</h1>
-            <a href="/" class="btn btn-secondary">返回主页</a>
+            <div>
+                <a href="/clothing/new" class="btn btn-primary me-2">新建条目</a>
+                <a href="/" class="btn btn-secondary">返回主页</a>
+            </div>
         </div>
         <!-- 衣服数据表格 -->
         <table class="table table-striped table-hover bg-white rounded">
