--- a/templates/figures/list.html
+++ b/templates/figures/list.html
@@ -2,8 +2,8 @@
  * @Author: Leili
  * @Date: 2025-05-18 21:05:15
  * @LastEditors: Leili
- * @LastEditTime: 2025-05-21 12:53:14
- * @FilePath: /StorageManagement/templates/figures.html
+ * @LastEditTime: 2025-05-27 12:54:23
+ * @FilePath: /StorageManagement/templates/figures/list.html
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -15,6 +15,7 @@
     <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/list.css">
 </head>
 <body class="bg-morandi-cream">
     <div class="container py-5">
@@ -36,8 +37,7 @@
                         <th>子类别</th>
                         <th>购买价格</th>
                         <th>购买日期</th>
-                        <th>卖出价格</th>
-                        <th>卖出日期</th>
+                        <th>状态</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,13 +47,19 @@
                         <td>{{ item.category }}</td>
                         <td>¥{{ item.purchase_price }}{% if item.shipping_fee and item.shipping_fee != 0 %}(+{{ item.shipping_fee }}){% endif %}</td>
                         <td class="date">{{ item.purchase_date }}</td>
-                        {# 剔除空值和nan的值 #}{% if item.sold_price and item.sold_price == item.sold_price %} 
-                        <td>¥{{ item.sold_price }}</td>
-                        <td class="date">{{ item.sold_date }}</td>
-                        {% else %}
-                        <td></td>
-                        <td></td>
-                        {% endif %}
+                        <td>
+                            {% if item.sold_price and item.sold_price == item.sold_price %}
+                            <span class="sold-badge">
+                                已卖出
+                                <div class="sold-tooltip">
+                                    卖出价格: ¥{{ item.sold_price }}<br>
+                                    卖出日期: {{ item.sold_date }}
+                                </div>
+                            </span>
+                            {% else %}
+                            <span class="text-muted">持有中</span>
+                            {% endif %}
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
