--- a/templates/figures/detail.html
+++ b/templates/figures/detail.html
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="/static/images/{{ item.image|replace('.jpg', '.webp')|replace('.png', '.webp') }}" class="img-fluid rounded mb-3" alt="{{ item.name }}">
+                        <img src="/static/images/figures/{{ item.image|replace('.jpg', '.webp')|replace('.png', '.webp') }}" class="img-fluid rounded mb-3" alt="{{ item.name }}">
                     </div>
                     <div class="col-md-6">
                         <!-- 添加编辑按钮 -->
