--- a/templates/figures/detail.html
+++ b/templates/figures/detail.html
@@ -52,7 +52,11 @@
                                 {{ display_attrib_filed('卖出价格', '¥' ~ item.sold_price ) }}
                                 {{ display_attrib_filed('卖出日期', item.sold_date) }}
                                 {% else %}
-                                {{ display_attrib_filed('状态', '<span class="text-muted">持有中</span>'|safe) }}
+                                {% if item.arrival_date and item.arrival_date == item.arrival_date %}
+                                {{ display_attrib_filed('状态', '持有中'|safe) }}
+                                {% else %}
+                                {{ display_attrib_filed('状态', '<span class="text-red">未到货</span>'|safe) }}
+                                {% endif %}
                                 {% endif %}
                             </ul>
                         </div>
