--- a/templates/clothing/new.html
+++ b/templates/clothing/new.html
@@ -16,7 +16,7 @@
 </head>
 
 <!-- 引入共享宏 -->
-{% from "macros.html" import form_field %}
+{% from "macros.html" import form_field, file_upload_field %}
 
 <body class="bg-morandi-cream">
     <div class="container py-5">
@@ -30,7 +30,8 @@
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <!-- 新建表单 -->
-                        <form id="newItemForm" data-item-type="clothing">
+                        <form id="newItemForm" data-item-type="clothing" enctype="multipart/form-data">
+                            {{ file_upload_field('image_upload', '上传图片') }}
                             {{ form_field('name', '名字', required=True) }}
                             {{ form_field('category', '子类别') }}
                             {{ form_field('purchase_price', '购买价格', 'number', step='0.01') }}
