--- a/templates/goods/new.html
+++ b/templates/goods/new.html
@@ -37,6 +37,7 @@
                             {{ form_field('purchase_price', '购买价格', 'number', step='0.01') }}
                             {{ form_field('purchase_date', '购买日期', 'date') }}
                             {{ form_field('purchase_channel', '购买渠道') }}
+                            {{ form_field('remark', '备注') }}
                             
                             <div class="d-flex justify-content-end mt-4">
                                 <a href="/goods" class="btn btn-outline-secondary me-2">取消</a>
