[V0.3.1] feat(ui): 添加导航栏组件并优化主页布局
- 在macros.html中新增navbar宏组件，提供统一导航功能
- 在所有页面模板中引入导航栏组件
- 重构index.html，改进统计卡片样式并添加快速操作区域
- 优化主页布局和视觉设计，提升用户体验

--- a/templates/figures/list.html
+++ b/templates/figures/list.html
@@ -2,7 +2,7 @@
  * @Author: Leili
  * @Date: 2025-05-18 21:05:15
  * @LastEditors: Leili
- * @LastEditTime: 2025-05-27 12:54:23
+ * @LastEditTime: 2025-06-18 10:28:45
  * @FilePath: /StorageManagement/templates/figures/list.html
  * @Description: 
 -->
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="/static/css/list.css">
 </head>
 <body class="bg-morandi-cream">
+    <!-- 导航栏，引入共享宏 -->
+    {% from "macros.html" import navbar %}
+    {{ navbar('figures') }}
+    
     <div class="container py-5">
         <!-- 标题 & 返回按钮 -->
         <div class="d-flex justify-content-between align-items-center mb-4">
